<resources>
    <string name="app_name">TaskMaster - Daily Habit Builder</string>
    <string name="alert_newTaskListTitle">Enter new tasklist name</string>
    <string name="alert_newTaskTitle">Enter new task name and time for notification</string>
    <string name="alert_newTaskConfirm">Save</string>
    <string name="alert_newTaskCancel">Cancel</string>
    <string name="alert_newTaskNameHint">Name:</string>
    <string name="alert_newTaskTitleEdit">Enter new task name</string>
    <string name="alert_newTaskNotificationTimeEdit">Enter new task notification time</string>
    <string name="alert_TaskNotificationTimeEdited">New notification time: </string>
    <string name="taskList_titlePlaceholder">No Tasklists Found.</string>
    <string name="taskList_addTask">Add Task</string>
    <string name="noData">No Tasklists found, please add your first tasklist.</string>
    <string name="task_titlePlaceholder">Task Title</string>
    <string name="task_notificationPlaceholder">Notify you at:</string>
    <string name="task_descriptionPlaceholder">Task Description</string>
    <string name="task_descriptionNoData">No description.</string>
    <string name="task_NotificationButton">Change notification time</string>
    <string name="toast_Template">Blank</string>
    <string name="toast_TaskList_NameTaken1">Tasklist with the name</string>
    <string name="toast_TaskList_NameTaken2">has been found, please use a different name.</string>
    <string name="toast_Task_NameTaken1">Task with the name</string>
    <string name="toast_Task_NameTaken2">has been found, please use a different name.</string>
    <string name="toast_TaskSavingSuccesful">Task added to tasklist successfully.</string>
    <string name="toast_TaskDeletingSuccesful">Task deleted.</string>
    <string name="toast_TaskDeletingFailed">Task deleting failed, please try again.</string>
    <string name="toast_TaskListSavingSuccesful">Tasklist updated successfully.</string>
    <string name="toast_TaskListSavingFailed">Oops, something bad happened on our end and the tasklist wasn\'t saved, please try again.</string>
    <string name="toast_TextInvalid">Please do not leave the text field blank, enter a valid name.</string>
    <string name="notification_task_check_action">CHECK OFF</string>
    <string name="notification_task_view_action">VIEW TASK</string>
    <string name="contentDescription_ImageButtonUnchecked">Unchecked circle, that can be checked by tapping.</string>
    <string name="contentDescription_ImageButtonChecked">Check mark, that can be unchecked by tapping.</string>
    <string name="contentDescription_ImageButtonDelete">Delete symbol to delete the task.</string>
    <string name="contentDescription_ImageButtonEdit">Edit Button.</string>
    <string name="contentDescription_ImageButtonClose">Close Button.</string>
    <string name="privacyPolicy"><u>Privacy Policy</u></string>
    <string name="and">and</string>
    <string name="termsConditions"><u>Terms and Conditions</u></string>
    <string name="DeveloperData_PrivacyPolicy">
Zakarie Ortiz built the TaskMaster - Daily Habit Builder app as a Free app. This SERVICE is provided by Zakarie Ortiz at no cost and is intended for use as is.
This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at TaskMaster - Daily Habit Builder unless otherwise defined in this Privacy Policy.
        \n\nInformation Collection and Use\n\nFor a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.
The app does use third party services that may collect information used to identify you.
Link to privacy policy of third party service providers used by the app
* Google Play Services
* Google Analytics for Firebase
* Firebase Crashlytics
\n\nLog Data\n\n
I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
\n\nCookies\n\n
Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.
This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
\n\nService Providers\n\n
I may employ third-party companies and individuals due to the following reasons:
* To facilitate our Service;
* To provide the Service on our behalf;
* To perform Service-related services; or
* To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
\n\nSecurity\n\n
I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security. At this current time the application does not send any of your task data over the internet, it is all kept on your device, and as such, it is up to you to protect your device and the data on it. This may change in the future, and if that happens then you will be notified in an in-app alert.
\n\nLinks to Other Sites\n\n
This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
\n\nChildren’s Privacy\n\n
These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.
\n\nChanges to This Privacy Policy\n\n
I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page and/or in the application itself in an alert, when the policy is changed.
This policy is effective as of 2020-06-16
\n\nEmail\n\n
If you email the developer for support or other feedback, the emails with email addresses will be retained for quality assurance purposes. The email addresses will be used only to reply to the concerns or suggestions raised and will never be used for any marketing purpose.
\n\nContact Us\n\n
If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at LegendaryDireDevelopment@gmail.com.</string>
</resources>