<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/guideline_topMargin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nuemorphic_container">

    <TextView
        android:id="@+id/tv_AlertConfirmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/alert_newTaskConfirm"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimaryAction"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottomMargin"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightMargin"
        app:layout_constraintStart_toStartOf="@+id/guideline_centerMarginActionButtons" />

    <TextView
        android:id="@+id/tv_AlertCancelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/alert_newTaskCancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottomMargin"
        app:layout_constraintEnd_toStartOf="@+id/guideline_centerMarginActionButtons"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftMargin" />

    <TextView
        android:id="@+id/tv_AlertTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/alert_newTaskListTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightMargin"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftMargin"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_leftMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_rightMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottomMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_centerMarginActionButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_leftMarginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_rightMarginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_topMarginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottomMarginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <View
        android:id="@+id/v_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/nuemorphic_container_et"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottomMarginEditText"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightMarginEditText"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftMarginEditText"
        app:layout_constraintTop_toTopOf="@+id/guideline_topMarginEditText" />

    <EditText
        android:id="@+id/et_NewTaskListName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:enabled="true"
        android:hint="@string/alert_newTaskNameHint"
        android:inputType="text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottomMarginEditText"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightMarginEditText"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftMarginEditText"
        app:layout_constraintTop_toTopOf="@+id/guideline_topMarginEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>

