<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/nuemorphic_container">

    <TextView
        android:id="@+id/tv_AlertConfirmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/alert_newTaskConfirm"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimaryAction"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottomMargin"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightMargin"
        app:layout_constraintStart_toStartOf="@+id/guideline_centerMarginActionButtons" />

    <TextView
        android:id="@+id/tv_AlertCancelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/alert_newTaskCancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottomMargin"
        app:layout_constraintEnd_toStartOf="@+id/guideline_centerMarginActionButtons"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftMargin" />

    <TextView
        android:id="@+id/tv_AlertTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:text="@string/alert_newTaskNotificationTimeEdit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottomMarginTitle"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightMarginEditText"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftMarginEditText"
        app:layout_constraintTop_toTopOf="@+id/guideline_topMarginTitle" />

    <TextView
        android:id="@+id/tv_AlertNewNotificationTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/alert_TaskNotificationTimeEdited"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_topMarginTimePicker"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightMarginEditText"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftMarginEditText"
        app:layout_constraintTop_toBottomOf="@+id/guideline_bottomMarginTitle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_leftMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_rightMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_topMarginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottomMarginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottomMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_centerMarginActionButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_leftMarginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_rightMarginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_topMarginTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <TimePicker
        android:id="@+id/tp_NotificationTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryMain"
        android:descendantFocusability="blocksDescendants"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottomMarginTimePicker"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightMargin"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftMargin"
        app:layout_constraintTop_toBottomOf="@id/guideline_topMarginTimePicker" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottomMarginTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>